<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    tools:context=".CadastroJogadorFragment">

    <TextView
        android:id="@+id/addPlayersTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="26dp"
        android:gravity="center"
        android:text="@string/add_players"
        app:layout_constraintBottom_toTopOf="@+id/jogadorName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/jogadorName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="13dp"
        android:hint="@string/name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/jogadorCpf"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addPlayersTextView" />

    <EditText
        android:id="@+id/jogadorCpf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="13dp"
        android:hint="@string/document"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/jogadorBirthYear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/jogadorName" />

    <EditText
        android:id="@+id/jogadorBirthYear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="26dp"
        android:hint="@string/birth_year"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/jogadorCpf" />

    <Button
        android:id="@+id/save_jogador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="291dp"
        android:layout_marginBottom="30dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listJogadoresCadastro"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="26dp"
        android:gravity="center"
        android:text="@string/select_time"
        app:layout_constraintBottom_toTopOf="@+id/listJogadoresCadastro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/jogadorBirthYear" />

    <ListView
        android:id="@+id/listJogadoresCadastro"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="26dp"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/jogadorBirthYear"
        app:layout_constraintVertical_bias="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>